# functional-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: car.h  common.h  company.h  currying17.h  error_test.h  partial_application.h  person.h
src/basics/: average.cpp  filtering_and_transforming.cpp  folding.cpp  implementing_hof.cpp  string_trimming.cpp  wc_functional.cpp  wc_imperative.cpp
src/functional_objects/: boost_phoenix_operator_function_objects.cpp  company.cpp  filter_less_boilerplate.cpp  function_definition.cpp  functions.cpp  lambda_internals.cpp  lambdas.cpp  mutable_lambda.cpp  stl_operator_function_objects.cpp  wrapping_with_std_function.cpp
src/lazy_evaluation/: fib.cpp  memoization.cpp
src/new_functions/: bind.cpp  currying.cpp  currying17.cpp  function_composition.cpp  function_lifting.cpp  lambdas.cpp  partial_function_application.cpp
src/purity/: const.cpp
src/ranges/: infinite_ranges.cpp  range_filter_and_transform.cpp
